--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,28 @@
 @font-face {
   font-family: "Roboto";
+  font-weight: 400;
+  font-style: normal;
   src: local("Roboto"),
-       url("roboto.woff2") format("woff2"),
-       url("roboto.woff") format("woff");
+       url("/fonts/roboto.woff2") format("woff2"),
+       url("/fonts/roboto.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto Bold";
+  font-weight: 700;
+  font-style: normal;
+  src: local("Roboto Bold"),
+       url("/fonts/robotobold.woff2") format("woff2"),
+       url("/fonts/robotobold.woff") format("woff");  
+}
+
+@font-face {
+  font-family: "Roboto Medium";
+  font-weight: 500;
+  font-style: normal;
+  src: local("Roboto Medium"),
+       url("/fonts/robotomedium.woff2") format("woff2"),
+       url("/fonts/robotomedium.woff") format("woff");   
 }
 
 :root {
@@ -20,7 +40,7 @@ body {
   min-width: 960px;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", "Arial", sans-serif ; 
+  font-family: "Roboto", "Arial", sans-serif; 
   font-size: 16px;
   line-height: 24px;
   color: var(--basic-dark);
@@ -77,7 +97,7 @@ img {
   line-height: 30px;
 }
 
-.button-general {
+.button {
   font: inherit;
   text-transform: uppercase;
   font-size: 16px;
