--- a/css/style.css
+++ b/css/style.css
@@ -3,26 +3,26 @@
   font-weight: 400;
   font-style: normal;
   src: local("Roboto"),
-       url("/fonts/roboto.woff2") format("woff2"),
-       url("/fonts/roboto.woff") format("woff");
+       url("../fonts/roboto.woff2") format("woff2"),
+       url("../fonts/roboto.woff") format("woff");
 }
 
 @font-face {
-  font-family: "Roboto Bold";
+  font-family: "Roboto";
   font-weight: 700;
   font-style: normal;
-  src: local("Roboto Bold"),
-       url("/fonts/robotobold.woff2") format("woff2"),
-       url("/fonts/robotobold.woff") format("woff");  
+  src: local("Roboto"),
+       url("../fonts/robotobold.woff2") format("woff2"),
+       url("../fonts/robotobold.woff") format("woff");  
 }
 
 @font-face {
-  font-family: "Roboto Medium";
+  font-family: "Roboto";
   font-weight: 500;
   font-style: normal;
-  src: local("Roboto Medium"),
-       url("/fonts/robotomedium.woff2") format("woff2"),
-       url("/fonts/robotomedium.woff") format("woff");   
+  src: local("Roboto"),
+       url("../fonts/robotomedium.woff2") format("woff2"),
+       url("../fonts/robotomedium.woff") format("woff");   
 }
 
 :root {
