--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,7 @@ img {
 }
 
 .main-header-logo {
-  outline: 5px solid rgba(255, 0, 0, 0.3);
-  outline-offset: -5px;
+  padding-top: 49px;
 }
 
 .main-navigation {
@@ -78,6 +77,7 @@ img {
   grid-template-columns: 170px 1fr min-content;
   font-size: 16px;
   line-height: 30px;
+  font-weight: 500;
   color: var(--basic-black);
   text-transform: uppercase;
 }
@@ -89,8 +89,11 @@ img {
 }
 
 .site-navigation {
-  outline: 5px solid rgba(0, 255, 255, 0.3);
-  outline-offset: -5px;
+  display: flex;
+  justify-content: space-around;
+  margin-left: 202px;
+  padding-top: 75px;
+  width: 430px;
 }
 
 .site-navigation a {
@@ -107,7 +110,12 @@ img {
 }
 
 .basket-link {
+  padding-left: 70px;
   color: var(--basic-black);
+}
+
+.user-navigation {
+  padding-top: 75px;
 }
 
 .main-header h1 {
@@ -199,6 +207,13 @@ img {
   color: inherit;
 }
 
+.profitable {
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 50px;
+  width: 660px; 
+}
+
 .profitable h2 {
   font-size: 36px;
   line-height: 36px;
@@ -244,18 +259,12 @@ img {
   height: 100%;
 }
 
-.user-navigation {
-  outline: 5px solid rgba(255, 0, 255, 0.3);
-  outline-offset: -5px;
-}
-
 .services {
   display: grid;
   margin-bottom: 80px;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 100px;
   padding-right: 30px;
-  outline: 5px solid rgba(255, 0, 0 , 0.3);
 }
 
 .wrapper {
@@ -265,31 +274,28 @@ img {
 }
 
 .block-info {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  
-  outline: 5px solid rgba(255, 127, 80);
+  display: flex;
+  width: 1174px;
+  justify-content: space-between;
 }
 
 .clients-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  column-gap: 106px;
-  outline: 5px solid rgba(0, 255, 0, 0.3);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 1160px;
+  height: 184px;
+  outline: 5px solid rgba(147, 112, 219);
   outline-offset: -5px;
 }
 
 .clients {
   margin-top: 73px;
-  outline: 5px solid rgba(255, 0, 255, 0.3);
-  outline-offset: -5px;
 }
 
 .block-social {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  outline: 5px solid rgba(147, 112, 219);
-  outline-offset: -5px;
 }
 
 .contacts {
@@ -302,8 +308,6 @@ img {
 }
 
 .main-footer {
-  outline: 5px solid rgba(0, 139, 139);
-  outline-offset: -5px;
   margin-top: 80px;
 }
 
@@ -341,6 +345,27 @@ img {
   outline: 5px solid rgba(147, 112, 219);
   outline-offset: -5px;
 }
+
+.features-list {
+  display: flex;
+  justify-content: space-around;
+}
+
+.list-social {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 25px;
+  width: 263px;
+  height: 81px;
+}
+
+.modal {
+  display: block;
+  width: 960px;
+}
+
+
 
 
 
